View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032041 | Community | OCCT:Modeling Data | public | 2021-01-07 10:10 | 2021-01-16 14:12 |
Reporter | alexzkw | Assigned To | bugmaster | ||
Priority | normal | Severity | crash | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | Windows | ||
Product Version | 5.2.2 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032041: Modeling Data - Access violation ExchangeUV in Geom_BezierSurface | ||||
Description | Calling method ExchangeUV() in Geom_BezierSurface may lead to Access Violation. | ||||
Steps To Reproduce | pload MODELING beziersurf bs 4 4 0 0 0 4 0 0 8 0 0 12 0 0 0 4 0 4 4 1 8 4 0 12 4 0 0 8 0 4 8 0 8 8 -1 12 8 0 0 12 0 4 12 0 8 12 0 12 12 0 exchuv bs C++ Code to reproduce: TColgp_Array2OfPnt anArr(1, 2, 1, 3); anArr.SetValue(1, 1, gp_Pnt(0, 0, 0)); anArr.SetValue(1, 2, gp_Pnt(0, 1, 0)); anArr.SetValue(1, 3, gp_Pnt(0, 2, 0)); anArr.SetValue(2, 1, gp_Pnt(1, 0, 0)); anArr.SetValue(2, 2, gp_Pnt(1, 1, 0)); anArr.SetValue(2, 3, gp_Pnt(1, 2, 0)); const Handle(Geom_BezierSurface) aBezierSurf = new Geom_BezierSurface(anArr); aBezierSurf->ExchangeUV(); | ||||
Tags | No tags attached. | ||||
Test case number | bugs/moddata_3/bug32041 | ||||
|
There are no check the member variable (address of weights) exist or not, Geom_BSplineSurface has this problem also. |
|
Branch CR32041 has been created by kgv. SHA-1: 873d7742233e98fb42f43d6ec20281a58b6a1014 Detailed log of new commits: Author: kgv Date: Thu Jan 7 23:10:27 2021 +0300 0032041: Modeling Data - Access violation ExchangeUV in Geom_BezierSurface Added missing NULL-checks to Geom_BezierSurface::ExchangeUV() and Geom_BSplineSurface::ExchangeUV(). |
|
Patch is ready for review - OCCT branch: CR32041. http://jenkins-test-12.nnov.opencascade.com/view/CR32041-master-KGV/ |
|
For integration: occt - CR32041 products - none |
|
Combination - OCCT branch : IR-2021-01-15 master SHA - 6fab0b34288ef3f29ecf4eabc0283540460dbc31 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2021-01-15 SHA - a8521c25e41405ac279e65e1fcde5de75a344b0b was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17754.160000000134 / 17720.07000000011 [+0.19%] Products Total CPU difference: 12412.630000000105 / 12419.360000000095 [-0.05%] Windows-64-VC14: OCCT Total CPU difference: 19336.3125 / 19330.015625 [+0.03%] Products Total CPU difference: 13740.03125 / 13831.828125 [-0.66%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
occt: master 83746de8 2021-01-07 20:10:27 Committer: bugmaster Details Diff |
0032041: Modeling Data - Access violation ExchangeUV in Geom_BezierSurface Added missing NULL-checks to Geom_BezierSurface::ExchangeUV() and Geom_BSplineSurface::ExchangeUV(). |
Affected Issues 0032041 |
|
mod - src/Geom/Geom_BezierSurface.cxx | Diff File | ||
mod - src/Geom/Geom_BSplineSurface.cxx | Diff File | ||
add - tests/bugs/moddata_3/bug32041 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-01-07 10:10 | alexzkw | New Issue | |
2021-01-07 10:10 | alexzkw | Assigned To | => msv |
2021-01-07 11:59 | kgv | Target Version | => 7.6.0 |
2021-01-07 11:59 | kgv | Summary | Access violation ExchangeUV in Geom_BezierSurface => Modeling Data - Access violation ExchangeUV in Geom_BezierSurface |
2021-01-07 11:59 | kgv | Steps to Reproduce Updated | |
2021-01-07 23:08 | kgv | Steps to Reproduce Updated | |
2021-01-08 06:38 | zale_lzj | Note Added: 0098014 | |
2021-01-08 14:14 | kgv | Product Version | 7.3.0 => 5.2.2 |
2021-01-09 23:30 | git | Note Added: 0098018 | |
2021-01-10 01:21 | kgv | Note Added: 0098027 | |
2021-01-10 01:21 | kgv | Status | new => resolved |
2021-01-11 09:46 | msv | Note Added: 0098044 | |
2021-01-11 09:46 | msv | Assigned To | msv => bugmaster |
2021-01-11 09:46 | msv | Status | resolved => reviewed |
2021-01-16 13:29 | bugmaster | Note Added: 0098141 | |
2021-01-16 13:29 | bugmaster | Status | reviewed => tested |
2021-01-16 13:41 | bugmaster | Test case number | => bugs/moddata_3/bug32041 |
2021-01-16 14:12 | bugmaster | Changeset attached | => occt master 83746de8 |
2021-01-16 14:12 | bugmaster | Status | tested => verified |
2021-01-16 14:12 | bugmaster | Resolution | open => fixed |