0032041: Modeling Data - Access violation ExchangeUV in Geom_BezierSurface

Added missing NULL-checks to Geom_BezierSurface::ExchangeUV() and Geom_BSplineSurface::ExchangeUV().